--- a/Blackboard/app/src/main/res/values/themes.xml
+++ b/Blackboard/app/src/main/res/values/themes.xml
@@ -38,5 +38,11 @@
 
 
 </style>
+    <style name="Theme.Blackboard.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.Blackboard.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Blackboard.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
 
