--- a/Blackboard/app/src/main/res/layout/activity_search.xml
+++ b/Blackboard/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,56 +8,78 @@
     android:background="@drawable/activity_background"
     tools:context=".Blackboard.Search.SearchActivity">
 
+    <Button
+        android:id="@+id/search_back"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintVertical_bias="0.01"
+
+        android:onClick="ClickBack"
+        android:background="@drawable/ic_settings_back"
+        />
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="25dp"
+
+        app:layout_constraintStart_toEndOf="@id/search_back"
+        app:layout_constraintTop_toTopOf="@id/search_back"
+        app:layout_constraintBottom_toBottomOf="@id/search_back"
+
+        android:text="返回"
+        android:textSize="17sp"
+        android:onClick="ClickBack"
+        />
 
     <EditText
         android:id="@+id/search_edittext"
-        android:layout_width="304dp"
-        android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/edittext_style"
-        android:imeOptions="actionSearch"
-        android:paddingLeft="10dp"
-        android:singleLine="true"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.05"
+
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_back"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintVertical_bias="0.08"
+
+        android:imeOptions="actionSearch"
+        android:singleLine="true"
+        android:background="@drawable/edittext_style"
+        />
 
     <Button
         android:id="@+id/search"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="25dp"
-        android:layout_toEndOf="@+id/search_edittext"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.095"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.055"
+
+        app:layout_constraintTop_toTopOf="@id/search_edittext"
+        app:layout_constraintBottom_toBottomOf="@id/search_edittext"
+        app:layout_constraintStart_toEndOf="@id/search_edittext"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintVertical_bias="0.08"
+
         android:background="@drawable/ic_search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/search_edittext"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/search_back"
-        android:layout_width="83dp"
-        android:layout_height="41dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="4dp"
-        android:background="@color/white"
-        android:drawableLeft="@drawable/ic_settings_back"
-        android:text="返回"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
