--- a/Blackboard/app/src/main/res/layout/activity_search_result.xml
+++ b/Blackboard/app/src/main/res/layout/activity_search_result.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,59 +8,83 @@
     android:background="@drawable/activity_background"
     tools:context=".Blackboard.Search.SearchResultActivity">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+
+
+
+    <Button
+        android:id="@+id/search_result_back"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
 
-        <EditText
-            android:id="@+id/search_result_edittext"
-            android:layout_width="304dp"
-            android:layout_height="36dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/edittext_style"
-            android:imeOptions="actionSearch"
-            android:paddingLeft="10dp"
-            android:singleLine="true" />
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintVertical_bias="0.01"
 
-        <Button
-            android:id="@+id/search_result"
-            android:layout_width="48dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="355dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="19dp"
-            android:layout_marginBottom="21dp"
-            android:layout_toEndOf="@+id/search_result_edittext"
-            android:background="@drawable/ic_search" />
+        android:onClick="ClickBack"
+        android:background="@drawable/ic_settings_back"
+        />
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="25dp"
 
-        <Button
-            android:id="@+id/search_result_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="23dp"
-            android:layout_marginEnd="300dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            android:drawableLeft="@drawable/ic_settings_back"
-            android:text="返回" />
-    </RelativeLayout>
+        app:layout_constraintStart_toEndOf="@id/search_result_back"
+        app:layout_constraintTop_toTopOf="@id/search_result_back"
+        app:layout_constraintBottom_toBottomOf="@id/search_result_back"
+
+        android:text="返回"
+        android:textSize="17sp"
+        android:onClick="ClickBack"
+        />
+
+    <EditText
+        android:id="@+id/search_result_edittext"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.05"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintVertical_bias="0.08"
+
+        android:imeOptions="actionSearch"
+        android:singleLine="true"
+        android:background="@drawable/edittext_style"
+        />
+
+    <Button
+        android:id="@+id/search_result"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.095"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.055"
+
+        app:layout_constraintTop_toTopOf="@id/search_result_edittext"
+        app:layout_constraintBottom_toBottomOf="@id/search_result_edittext"
+        app:layout_constraintStart_toEndOf="@id/search_result_edittext"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintVertical_bias="0.08"
+
+        android:background="@drawable/ic_search"
+        />
+
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_search"
