--- a/Blackboard/app/src/main/res/layout/item_topic.xml
+++ b/Blackboard/app/src/main/res/layout/item_topic.xml
@@ -10,12 +10,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginStart="10dp"
 
         android:hint="#添加话题"
         android:textColor="@color/blue"
         android:textSize="25sp"
-        android:gravity="center_vertical"
+        android:gravity="start|center_vertical"
         />
 
     <Button
@@ -28,7 +29,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
 
-        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintHorizontal_bias="1"
+        android:layout_marginEnd="10dp"
 
         android:background="@drawable/ic_baseline_add_circle_outline_24"
         />
