--- a/Blackboard/app/src/main/res/values/colors.xml
+++ b/Blackboard/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="green">#EE437d5c</color>
     <color name="yellow">#FFe2d421</color>
     <color name="golden">#EE86833f</color>
+    <color name="a">#D8FCEA</color>
+    <color name="b">#333333</color>
 </resources>
