--- a/Blackboard/app/src/main/res/layout/activity_board.xml
+++ b/Blackboard/app/src/main/res/layout/activity_board.xml
@@ -13,21 +13,22 @@
 
                 <Button
                     android:id="@+id/board_search"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:background="@drawable/ic_search"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="7dp"/>
                 <Button
                     android:id="@+id/board_add"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:background="@drawable/ic_baseline_add_circle_outline_24"
                     app:layout_constraintEnd_toStartOf="@id/board_search"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="5dp" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -35,10 +36,10 @@
                     android:layout_height="wrap_content"
                     android:text="@string/board"
                     android:textSize="36sp"
-                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="5dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
