--- a/Blackboard/app/src/main/res/layout/activity_post.xml
+++ b/Blackboard/app/src/main/res/layout/activity_post.xml
@@ -5,30 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Blackboard.New.PostActivity">
-    <Button
-        android:id="@+id/back_button"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/content1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.06"
+
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="5dp"
-        android:background="@drawable/ic_settings_back"
-        android:onClick="clickBack"/>
-    <TextView
-        android:id="@+id/back"
-        android:layout_width="50dp"
-        android:layout_height="25dp"
-        app:layout_constraintStart_toEndOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="@id/back_button"
-        android:text="返回"
-        android:textSize="17sp"
-        android:onClick="clickBack" />
+        android:gravity="center_vertical">
+        <Button
+            android:id="@+id/back"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:layout_constraintHorizontal_bias="0.04"
+
+            android:onClick="clickBack"
+            android:background="@drawable/ic_settings_back"
+            />
+        <TextView
+            android:id="@+id/back2"
+            android:layout_width="50dp"
+            android:layout_height="25dp"
+
+            app:layout_constraintStart_toEndOf="@id/back"
+            app:layout_constraintTop_toTopOf="@id/back"
+
+            android:text="返回"
+            android:textSize="17sp"
+            android:onClick="clickBack"
+            />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/say"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        app:layout_constraintTop_toBottomOf="@id/back_button"
+        app:layout_constraintTop_toBottomOf="@id/content1"
         android:layout_marginTop="10dp"
         android:background="@drawable/message_background">
 
