--- a/Blackboard/app/src/main/res/layout/item_message.xml
+++ b/Blackboard/app/src/main/res/layout/item_message.xml
@@ -61,7 +61,6 @@
             app:layout_constraintVertical_bias="0"
 
             android:text="TextView"
-            android:textColor="@color/black"
             android:textSize="20sp"
             />
 
@@ -82,7 +81,6 @@
             app:layout_constraintVertical_bias="0.1"
 
             android:text="2022-1-1"
-            android:textColor="@color/black"
             android:textSize="10sp"
             />
 
@@ -122,7 +120,9 @@
             app:layout_constraintEnd_toEndOf="parent"
 
             android:text="TextView"
-            android:textColor="@color/black"
+            android:textColor="@color/message_text"
+            android:maxLines="5"
+            android:ellipsize="end"
             />
 
 
