--- a/Blackboard/app/src/main/res/layout/utils_collapsible.xml
+++ b/Blackboard/app/src/main/res/layout/utils_collapsible.xml
@@ -5,22 +5,17 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/desc_tv"
+        android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4.0dip"
-        android:gravity="center_vertical"
-        android:textColor="#ff000000"
+        android:textColor="@color/message_text"
         android:textSize="14.0dip" />
 
     <!--可以灵活的将收藏的按钮至右 至左 居中  -->
     <TextView
-        android:id="@+id/desc_op_tv"
+        android:id="@+id/hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4.0dip"
-        android:gravity="right"
-
         android:singleLine="true"
         android:textColor="#ff576b95"
         android:textSize="14.0dip"
