头像点击跳转

--- a/Blackboard/app/src/main/res/layout/activity_settings.xml
+++ b/Blackboard/app/src/main/res/layout/activity_settings.xml
@@ -12,7 +12,8 @@
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button"
-         android:layout_marginTop="100dp"/>
+         android:layout_marginTop="100dp"
+         />
 
     <TextView
         android:layout_width="wrap_content"
