--- a/Blackboard/app/src/main/res/layout/activity_post.xml
+++ b/Blackboard/app/src/main/res/layout/activity_post.xml
@@ -53,7 +53,7 @@
         android:layout_height="250dp"
         app:layout_constraintTop_toBottomOf="@id/content1"
         android:layout_marginTop="10dp"
-        android:background="@drawable/message_background">
+        android:background="@drawable/back1">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photo"
