--- a/Blackboard/app/src/main/res/layout/item_message.xml
+++ b/Blackboard/app/src/main/res/layout/item_message.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
 
-        android:background="@drawable/message_background"
+        android:background="@drawable/meesage_background1"
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -121,7 +121,7 @@
             app:layout_constraintEnd_toEndOf="parent"
 
             android:text="TextView"
-            android:textColor="@color/message_text"
+            android:textColor="@color/black"
             android:maxLines="5"
             android:ellipsize="end"
             />
