--- a/Blackboard/app/src/main/res/layout/fragment_organization.xml
+++ b/Blackboard/app/src/main/res/layout/fragment_organization.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+<!--<androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/freshOgn"
@@ -11,4 +12,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
