--- a/Blackboard/app/src/main/res/layout/activity_mine.xml
+++ b/Blackboard/app/src/main/res/layout/activity_mine.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Mine.MineActivity"
-    android:background="@color/gray">
+    android:background="@color/white">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
