--- a/Blackboard/app/src/main/res/layout/activity_post.xml
+++ b/Blackboard/app/src/main/res/layout/activity_post.xml
@@ -77,7 +77,7 @@
             />
 
         <TextView
-            android:id="@+id/topic"
+            android:id="@+id/topicAMD"
             android:layout_width="120dp"
             android:layout_height="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
