--- a/Blackboard/app/src/main/res/layout/activity_search_result.xml
+++ b/Blackboard/app/src/main/res/layout/activity_search_result.xml
@@ -89,11 +89,11 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_search"
         android:layout_width="match_parent"
-        android:layout_height="594dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="600dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_result_edittext" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
