--- a/Blackboard/app/src/main/res/layout/item_relative_organization.xml
+++ b/Blackboard/app/src/main/res/layout/item_relative_organization.xml
@@ -4,6 +4,13 @@
     android:layout_height="100dp"
     android:padding="8dp">
 
+<!--    <de.hdodenhof.circleimageview.CircleImageView-->
+<!--        android:id="@+id/relative_organization_avatar"-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginLeft="10dp"-->
+<!--        android:layout_marginTop="10dp" />-->
+
     <Button
         android:id="@+id/subscribe"
         android:layout_width="100dp"
