--- a/Blackboard/app/src/main/res/layout/item_relative_message.xml
+++ b/Blackboard/app/src/main/res/layout/item_relative_message.xml
@@ -1,26 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:padding="8dp">
+    android:layout_height="180dp"
+    android:padding="12dp">
 
-    <TextView
-        android:id="@+id/relative_message_tag"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="70dp"
-        android:text="#标签"
-        android:textColor="@color/blue"
-        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/relative_message_contents"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="14sp"
+        android:layout_width="380dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginLeft="4dp"
         android:text="发布内容"
-        android:layout_marginTop="26dp"
-        android:layout_marginLeft="70dp" />
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.321"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/relative_message_organization_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="——发布团队"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.977"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/relative_message_time"
+        android:layout_width="252dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="4dp"
+        android:text="发布时间"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
